2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade), (clearlooks_draw_menubar0),
	(clearlooks_draw_menubar2), (clearlooks_get_frame_gap_clip),
	(clearlooks_draw_frame), (clearlooks_draw_tab):
	* engines/clearlooks/src/clearlooks_types.h:
	More cleanups. Frame drawing mostly.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_shadow), (clearlooks_draw_gripdots),
	(clearlooks_draw_slider), (clearlooks_draw_slider_button),
	(clearlooks_draw_handle):
	More 0.5 offset cleanups (and radius fixes).

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_top_left_highlight), (clearlooks_draw_button),
	(clearlooks_draw_scrollbar_stepper):
	Button and clearlooks_draw_top_left_highlight cleanup and small fixes.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_entry):
	Some entry drawing cleanups, and better "radius" handeling.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw*.c:
	Start to clean up the 0.5 translation mess.

2008-04-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):
	Added the variables we should use to adjust spot[2] for dark themes.
	Still no algorithm.

2008-04-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	gtk-engines 2.15.0 release.

2008-04-13  Thomas Wood  <thos@gnome.org>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_shadow):
	* themes/Redmond/gtk-2.0/gtkrc:

	Fix menu borders and padding

2008-04-13  Thomas Wood  <thos@gnome.org>

	* engines/redmond/src/redmond_gtk2_drawing.c: